--- a/iBuilt/Base.lproj/Main.storyboard
+++ b/iBuilt/Base.lproj/Main.storyboard
@@ -195,11 +195,6 @@
                                     <segue destination="VIq-Wp-0N6" kind="show" id="bqU-kZ-34e"/>
                                 </connections>
                             </button>
-                            <searchBar contentMode="redraw" fixedFrame="YES" prompt="Search furniture" placeholder="'red couch'" showsSearchResultsButton="YES" showsBookmarkButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OAR-Rm-YAP">
-                                <frame key="frameInset" height="75"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -224,32 +219,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Manuals" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gof-YI-P5J">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Manuals" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gof-YI-P5J">
                                 <frame key="frameInset" minX="54" minY="39" width="267" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VMI-s9-xka">
-                                <frame key="frameInset" minX="16" minY="98" width="343" height="494"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VMI-s9-xka">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="4N0-Si-ei9" id="gdX-FH-CO7"/>
                                     <outlet property="delegate" destination="4N0-Si-ei9" id="cKM-bE-4P2"/>
                                 </connections>
                             </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="ol6-4W-Zu9">
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ol6-4W-Zu9" firstAttribute="centerX" secondItem="Gof-YI-P5J" secondAttribute="centerX" id="7hw-29-AeC"/>
+                            <constraint firstItem="ywC-YB-3Wp" firstAttribute="top" secondItem="VMI-s9-xka" secondAttribute="bottom" constant="8" symbolic="YES" id="7wZ-Hk-FGI"/>
+                            <constraint firstItem="ol6-4W-Zu9" firstAttribute="leading" secondItem="DeY-fz-cii" secondAttribute="leading" id="9Fz-uk-s68"/>
+                            <constraint firstItem="VMI-s9-xka" firstAttribute="leading" secondItem="DeY-fz-cii" secondAttribute="leadingMargin" id="Gck-dA-D6p"/>
+                            <constraint firstItem="ol6-4W-Zu9" firstAttribute="centerX" secondItem="VMI-s9-xka" secondAttribute="centerX" id="J8F-DQ-Fit"/>
+                            <constraint firstItem="ol6-4W-Zu9" firstAttribute="top" secondItem="bDx-34-XGg" secondAttribute="bottom" id="OiP-C8-MHP"/>
+                            <constraint firstItem="VMI-s9-xka" firstAttribute="top" secondItem="ol6-4W-Zu9" secondAttribute="bottom" constant="8" id="ctO-97-evu"/>
+                            <constraint firstAttribute="trailing" secondItem="ol6-4W-Zu9" secondAttribute="trailing" id="g1g-JI-giJ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="PHh-hF-wvk"/>
                     <connections>
                         <outlet property="manualsTableView" destination="VMI-s9-xka" id="PaX-C5-2op"/>
+                        <outlet property="searchDisplayController" destination="hMp-NL-rTm" id="KVk-pE-uMd"/>
                         <segue destination="cgo-eY-I2T" kind="show" identifier="viewManualSegue" id="9Ql-ML-u3F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uNh-en-aMA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="hMp-NL-rTm">
+                    <connections>
+                        <outlet property="delegate" destination="4N0-Si-ei9" id="CH1-gb-wta"/>
+                        <outlet property="searchContentsController" destination="4N0-Si-ei9" id="cjc-9g-EV2"/>
+                        <outlet property="searchResultsDataSource" destination="4N0-Si-ei9" id="UjN-09-xdx"/>
+                        <outlet property="searchResultsDelegate" destination="4N0-Si-ei9" id="h39-2i-SNX"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="4727.1999999999998" y="437.63118440779613"/>
         </scene>
@@ -293,10 +307,19 @@
                     <connections>
                         <outlet property="descriptionLabel" destination="euK-e2-HN9" id="xRH-bu-SNU"/>
                         <outlet property="nameLabel" destination="AnI-fW-wwp" id="8XJ-B4-IEi"/>
+                        <outlet property="searchDisplayController" destination="tgb-dZ-MUU" id="A4o-qF-8nQ"/>
                         <outlet property="viewPDFButton" destination="qgy-vN-x8x" id="FJh-Fc-uBO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qjz-7k-g5W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="tgb-dZ-MUU">
+                    <connections>
+                        <outlet property="delegate" destination="cgo-eY-I2T" id="CUD-VM-lSl"/>
+                        <outlet property="searchContentsController" destination="cgo-eY-I2T" id="Ihc-U9-N6p"/>
+                        <outlet property="searchResultsDataSource" destination="cgo-eY-I2T" id="q75-Pe-AwC"/>
+                        <outlet property="searchResultsDelegate" destination="cgo-eY-I2T" id="2Jw-uP-1t3"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="5711.1999999999998" y="437.63118440779613"/>
         </scene>
@@ -335,6 +358,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rUv-aY-cmp">
+                                <frame key="frameInset" minY="64" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -398,10 +426,28 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
+                        <outlet property="searchDisplayController" destination="jUb-mz-F7l" id="qpV-rI-bPd"/>
                         <segue destination="pKK-mT-yYt" kind="relationship" relationship="rootViewController" id="imL-rk-IfI"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pcU-R7-rgZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchBar contentMode="redraw" id="N1f-gc-uhJ">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <outlet property="delegate" destination="fP9-gy-LLq" id="cV3-Wh-2AU"/>
+                    </connections>
+                </searchBar>
+                <searchDisplayController id="jUb-mz-F7l">
+                    <connections>
+                        <outlet property="delegate" destination="fP9-gy-LLq" id="u5U-ak-vTd"/>
+                        <outlet property="searchBar" destination="N1f-gc-uhJ" id="KZ0-iq-ZbR"/>
+                        <outlet property="searchContentsController" destination="fP9-gy-LLq" id="UBS-PE-ekU"/>
+                        <outlet property="searchResultsDataSource" destination="fP9-gy-LLq" id="CKD-hs-ge4"/>
+                        <outlet property="searchResultsDelegate" destination="fP9-gy-LLq" id="g9t-Mf-XwT"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="3788" y="-276.61169415292358"/>
         </scene>
