--- a/LaunchScreen-iPhone.xib
+++ b/LaunchScreen-iPhone.xib
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment version="2048" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view userInteractionEnabled="NO" contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="LaunchScreen-iPhonePortrait.png" translatesAutoresizingMaskIntoConstraints="NO" id="6pd-fU-b9y" userLabel="Image">
-                    <rect key="frame" x="8" y="8" width="584" height="584"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen Shot 2017-03-01 at 6.45.24 PM.png" translatesAutoresizingMaskIntoConstraints="NO" id="Vej-Wh-hqG">
+                    <rect key="frame" x="109" y="303" width="156" height="61"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="61" id="ard-w7-UJH"/>
+                    </constraints>
                 </imageView>
             </subviews>
+            <color key="backgroundColor" red="0.070588235294117646" green="0.094117647058823528" blue="0.12156862745098039" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="6pd-fU-b9y" secondAttribute="bottom" id="Y0U-Pe-L4d"/>
-                <constraint firstItem="6pd-fU-b9y" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="oOc-bh-ihE"/>
-                <constraint firstItem="6pd-fU-b9y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="q2g-Vy-0kF"/>
-                <constraint firstAttribute="trailing" secondItem="6pd-fU-b9y" secondAttribute="trailing" constant="8" id="rHJ-TI-xEc"/>
+                <constraint firstItem="Vej-Wh-hqG" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="5mI-NU-IGK"/>
+                <constraint firstItem="Vej-Wh-hqG" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="TSm-hf-aHD"/>
+                <constraint firstItem="Vej-Wh-hqG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="109" id="cBk-T1-p5e"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <point key="canvasLocation" x="315" y="378"/>
+            <point key="canvasLocation" x="314.5" y="377.5"/>
         </view>
     </objects>
     <resources>
-        <image name="LaunchScreen-iPhonePortrait.png" width="1242" height="2208"/>
+        <image name="Screen Shot 2017-03-01 at 6.45.24 PM.png" width="166" height="36"/>
     </resources>
 </document>
